@@ -1,9 +1,6 @@
 package com.cipalam.cipalam_sistema.service;
 
 import com.cipalam.cipalam_sistema.DTO.IniciarMatriculaResponse;
-import com.cipalam.cipalam_sistema.repository.InteresseMatriculaRepository;
-import com.cipalam.cipalam_sistema.repository.TurmaRepository;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -11,7 +8,10 @@ import jakarta.persistence.EntityManager;
 import jakarta.persistence.Query;
 import jakarta.persistence.StoredProcedureQuery;
 import jakarta.persistence.ParameterMode;
+import jakarta.persistence.PersistenceContext;
 
+import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -19,17 +19,12 @@ import java.util.Map;
 @Service
 public class IniciarMatriculaService {
 
-    @Autowired
+    @PersistenceContext
     private EntityManager entityManager;
 
-    @Autowired
-    private InteresseMatriculaRepository interesseMatriculaRepository;
-
-    @Autowired
-    private TurmaRepository turmaRepository;
-
     /**
-     * Lista declarações prontas para matrícula usando a view do banco
+     * Lista declarações prontas para matrícula usando a tabela real
+     * tbInteresseMatricula
      */
     public List<Map<String, Object>> listarDeclaracoesParaMatricula() {
         String sql = """
@@ -38,15 +33,21 @@ public class IniciarMatriculaService {
                         protocolo,
                         nomeAluno,
                         nomeResponsavel,
-                        tipoCotaDescricao,
+                        CASE
+                            WHEN tipoCota = 'livre' THEN 'Cota Livre'
+                            WHEN tipoCota = 'economica' THEN 'Cota Econômica'
+                            WHEN tipoCota = 'funcionario' THEN 'Cota Funcionário'
+                            ELSE tipoCota
+                        END as tipoCotaDescricao,
                         dataEnvio,
-                        status,
-                        diasAguardando
-                    FROM vw_declaracoes_para_matricula
-                    ORDER BY diasAguardando DESC
+                        DATEDIFF(CURDATE(), DATE(dataEnvio)) as diasAguardando
+                    FROM tbInteresseMatricula
+                    WHERE status = 'interesse_declarado'
+                    ORDER BY dataEnvio ASC
                 """;
 
         Query query = entityManager.createNativeQuery(sql);
+        @SuppressWarnings("unchecked")
         List<Object[]> results = query.getResultList();
 
         return results.stream().map(row -> {
@@ -57,14 +58,13 @@ public class IniciarMatriculaService {
             map.put("nomeResponsavel", row[3]);
             map.put("tipoCotaDescricao", row[4]);
             map.put("dataEnvio", row[5]);
-            map.put("status", row[6]);
-            map.put("diasAguardando", row[7]);
+            map.put("diasAguardando", row[6]);
             return map;
-        }).toList();
+        }).collect(java.util.stream.Collectors.toList());
     }
 
     /**
-     * Detalha uma declaração específica usando a view do banco
+     * Detalha uma declaração específica usando a tabela real tbInteresseMatricula
      */
     public Map<String, Object> detalharDeclaracao(Integer id) {
         String sql = """
@@ -79,20 +79,26 @@ public class IniciarMatriculaService {
                         telefoneResponsavel,
                         rendaResponsavel,
                         profissaoResponsavel,
-                        enderecoResponsavel,
-                        tipoCotaDescricao,
-                        integrantesFamilia,
-                        observacoes,
+                        CONCAT_WS(', ', logradouro, numero, complemento, bairro, cidade, uf) as enderecoCompleto,
+                        CASE
+                            WHEN tipoCota = 'livre' THEN 'Cota Livre'
+                            WHEN tipoCota = 'economica' THEN 'Cota Econômica'
+                            WHEN tipoCota = 'funcionario' THEN 'Cota Funcionário'
+                            ELSE tipoCota
+                        END as tipoCotaDescricao,
+                        integrantesRenda,
+                        observacoesResponsavel,
                         dataEnvio,
                         status,
-                        diasAguardando
-                    FROM vw_detalhamento_declaracao
+                        DATEDIFF(CURDATE(), DATE(dataEnvio)) as diasAguardando
+                    FROM tbInteresseMatricula
                     WHERE id = :id
                 """;
 
         Query query = entityManager.createNativeQuery(sql);
         query.setParameter("id", id);
 
+        @SuppressWarnings("unchecked")
         List<Object[]> results = query.getResultList();
         if (results.isEmpty()) {
             return null;
@@ -122,24 +128,36 @@ public class IniciarMatriculaService {
     }
 
     /**
-     * Lista turmas disponíveis para seleção usando a view do banco
+     * Lista turmas disponíveis para seleção usando a tabela real tbTurma
      */
     public List<Map<String, Object>> listarTurmasDisponiveis() {
         String sql = """
                     SELECT
-                        id,
-                        nome,
-                        turno,
-                        descricaoCompleta,
-                        vagasDisponiveis,
-                        temVagas,
+                        idtbTurma as id,
+                        nomeTurma as nome,
+                        CASE
+                            WHEN horarioInicio < '12:00:00' THEN 'Manhã'
+                            WHEN horarioInicio < '18:00:00' THEN 'Tarde'
+                            ELSE 'Noite'
+                        END as turno,
+                        CONCAT(nomeTurma, ' - ',
+                            CASE
+                                WHEN horarioInicio < '12:00:00' THEN 'Manhã'
+                                WHEN horarioInicio < '18:00:00' THEN 'Tarde'
+                                ELSE 'Noite'
+                            END,
+                            ' (', TIME_FORMAT(horarioInicio, '%H:%i'), ' às ', TIME_FORMAT(horarioFim, '%H:%i'), ')'
+                        ) as descricaoCompleta,
+                        (capacidadeMaxima - capacidadeAtual) as vagasDisponiveis,
+                        CASE WHEN (capacidadeMaxima - capacidadeAtual) > 0 THEN TRUE ELSE FALSE END as temVagas,
                         capacidadeMaxima
-                    FROM vw_turmas_para_selecao
-                    WHERE temVagas = TRUE
-                    ORDER BY nome, turno
+                    FROM tbTurma
+                    WHERE ativo = TRUE AND (capacidadeMaxima - capacidadeAtual) > 0
+                    ORDER BY horarioInicio ASC, nomeTurma ASC
                 """;
 
         Query query = entityManager.createNativeQuery(sql);
+        @SuppressWarnings("unchecked")
         List<Object[]> results = query.getResultList();
 
         return results.stream().map(row -> {
@@ -152,7 +170,7 @@ public class IniciarMatriculaService {
             map.put("temVagas", row[5]);
             map.put("capacidadeMaxima", row[6]);
             return map;
-        }).toList();
+        }).collect(java.util.stream.Collectors.toList());
     }
 
     /**
@@ -227,22 +245,24 @@ public class IniciarMatriculaService {
                         p_resp.idPessoa as idResponsavel,
                         a.matricula,
                         l.usuario as loginResponsavel,
-                        CONCAT('Últimos 4 dígitos do CPF: ', RIGHT(REPLACE(p_resp.cpfPessoa, '.', ''), 4)) as senhaTemporaria
+                        CONCAT('Últimos 4 dígitos do CPF: ', RIGHT(REPLACE(REPLACE(p_resp.CpfPessoa, '.', ''), '-', ''), 4)) as senhaTemporaria
                     FROM tbAluno a
                     INNER JOIN tbPessoa p_aluno ON a.tbPessoa_idPessoa = p_aluno.idPessoa
                     INNER JOIN tbFamilia f ON a.tbFamilia_idtbFamilia = f.idtbFamilia
-                    INNER JOIN tbPessoa p_resp ON f.tbResponsavel_tbPessoa_idPessoa = p_resp.idPessoa
-                    INNER JOIN tblogin l ON p_resp.idPessoa = l.pessoa_idPessoa
+                    INNER JOIN tbResponsavel r ON f.idtbFamilia = r.tbFamilia_idtbFamilia
+                    INNER JOIN tbPessoa p_resp ON r.tbPessoa_idPessoa = p_resp.idPessoa
+                    INNER JOIN tblogin l ON p_resp.idPessoa = l.tbPessoa_idPessoa
                     WHERE a.protocoloDeclaracao = (
                         SELECT protocolo FROM tbInteresseMatricula WHERE id = :declaracaoId
                     )
-                    ORDER BY a.id DESC
+                    ORDER BY a.dataInicioMatricula DESC
                     LIMIT 1
                 """;
 
         Query query = entityManager.createNativeQuery(sql);
         query.setParameter("declaracaoId", declaracaoId);
 
+        @SuppressWarnings("unchecked")
         List<Object[]> results = query.getResultList();
         if (results.isEmpty()) {
             return new HashMap<>();
@@ -250,9 +270,11 @@ public class IniciarMatriculaService {
 
         Object[] row = results.get(0);
         Map<String, Object> map = new HashMap<>();
-        map.put("idFamilia", row[0]);
-        map.put("idAluno", row[1]);
-        map.put("idResponsavel", row[2]);
+
+        // Converter Integer para Long quando necessário
+        map.put("idFamilia", row[0] instanceof Integer ? ((Integer) row[0]).longValue() : (Long) row[0]);
+        map.put("idAluno", row[1] instanceof Integer ? ((Integer) row[1]).longValue() : (Long) row[1]);
+        map.put("idResponsavel", row[2] instanceof Integer ? ((Integer) row[2]).longValue() : (Long) row[2]);
         map.put("matricula", row[3]);
         map.put("loginResponsavel", row[4]);
         map.put("senhaTemporaria", row[5]);
@@ -286,25 +308,32 @@ public class IniciarMatriculaService {
     }
 
     /**
-     * Lista documentos pendentes de um responsável usando a view do banco
+     * Lista documentos pendentes de um responsável usando tabelas reais
      */
     public List<Map<String, Object>> listarDocumentosPendentes(String cpfResponsavel) {
         String sql = """
                     SELECT
-                        tipoDocumento,
-                        descricaoDocumento,
-                        obrigatorio,
-                        statusEnvio,
-                        dataEnvio,
-                        observacoes
-                    FROM vw_documentos_responsavel
-                    WHERE cpfResponsavel = :cpfResponsavel
-                    ORDER BY obrigatorio DESC, tipoDocumento
+                        td.nome as tipoDocumento,
+                        td.descricao as descricaoDocumento,
+                        CASE WHEN cdc.tipoCota IS NOT NULL THEN TRUE ELSE FALSE END as obrigatorio,
+                        dm.status as statusEnvio,
+                        dm.dataEnvio,
+                        dm.observacoes
+                    FROM tbDocumentoMatricula dm
+                    INNER JOIN tbTipoDocumento td ON dm.tbTipoDocumento_idTipoDocumento = td.idTipoDocumento
+                    INNER JOIN tbFamilia f ON dm.tbFamilia_idtbFamilia = f.idtbFamilia
+                    INNER JOIN tbResponsavel r ON f.idtbFamilia = r.tbFamilia_idtbFamilia
+                    INNER JOIN tbPessoa p ON r.tbPessoa_idPessoa = p.idPessoa
+                    LEFT JOIN tbConfiguracaoDocumentosCota cdc ON f.tipoCota = cdc.tipoCota
+                        AND JSON_CONTAINS(cdc.documentosObrigatorios, JSON_OBJECT('idTipoDocumento', td.idTipoDocumento))
+                    WHERE p.cpfPessoa = :cpfResponsavel
+                    ORDER BY obrigatorio DESC, td.nome
                 """;
 
         Query query = entityManager.createNativeQuery(sql);
         query.setParameter("cpfResponsavel", cpfResponsavel);
 
+        @SuppressWarnings("unchecked")
         List<Object[]> results = query.getResultList();
 
         return results.stream().map(row -> {
@@ -316,7 +345,7 @@ public class IniciarMatriculaService {
             map.put("dataEnvio", row[4]);
             map.put("observacoes", row[5]);
             return map;
-        }).toList();
+        }).collect(java.util.stream.Collectors.toList());
     }
 
     /**
